[gd_scene load_steps=11 format=3 uid="uid://bc8g73oao3wgd"]

[ext_resource type="Script" path="res://items/item.gd" id="1_qub70"]
[ext_resource type="Texture2D" uid="uid://d36e7jdbck8k5" path="res://assets/items_sheet.png" id="2_gl51s"]
[ext_resource type="Script" path="res://items/Sprite2D.gd" id="3_x3epb"]
[ext_resource type="Script" path="res://components/move_component.gd" id="4_4py8s"]
[ext_resource type="Script" path="res://components/move_stats.gd" id="5_uldld"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="6_1765f"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="7_7lapg"]
[ext_resource type="Script" path="res://components/collisionbox_component.gd" id="8_wd6n8"]

[sub_resource type="Resource" id="Resource_e6s5f"]
script = ExtResource("5_uldld")
speed = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrrfn"]
size = Vector2(8, 8)

[node name="item" type="Node2D"]
script = ExtResource("1_qub70")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_gl51s")
hframes = 16
vframes = 16
frame = 1
script = ExtResource("3_x3epb")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_4py8s")
actor = NodePath("..")
move_stats = SubResource("Resource_e6s5f")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_1765f")
sprite = NodePath("../Sprite2D")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("7_7lapg")
sprite = NodePath("..")

[node name="CollisionBoxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("8_wd6n8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBoxComponent"]
shape = SubResource("RectangleShape2D_yrrfn")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
